fix splash spacing css

--- a/app/assets/stylesheets/splash/body/splash_body.css
+++ b/app/assets/stylesheets/splash/body/splash_body.css
@@ -18,6 +18,9 @@
     cursor: pointer;
     padding: 15px;
 }
+.carousel-slide {
+    margin: 0 25px 0 0;
+}
 
 .carousel-track {
     display: flex;
