--- a/app/assets/stylesheets/splash/body/splash_cover.css
+++ b/app/assets/stylesheets/splash/body/splash_cover.css
@@ -105,9 +105,9 @@
 }
 
 .splash-content-text {
-    font-size: 18px;
+    font-size: 20px;
     font-weight: 300;
-    width: 70vw;
-    margin: 30px 0 80px 0;
+    width: 45vw;
+    margin: 25px 0 80px 0;
     text-align: center;
 }
